--- a/index.css
+++ b/index.css
@@ -58,8 +58,10 @@ h1 {
 }
 
 .logo {
-    height: 2rem;
-    margin: 0 1rem;
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  width: auto;
 }
 
 #project-list {
