--- a/index.css
+++ b/index.css
@@ -60,10 +60,9 @@ h1 {
 .logo {
   max-width: 100%;
   max-height: 100%;
-  height: 100px;
+  height: auto;
   width: auto;
 }
-
 #project-list {
     height: 70vh;
     background: transparent;
