--- a/index.css
+++ b/index.css
@@ -60,8 +60,8 @@ h1 {
 .logo {
   max-width: 100%;
   max-height: 100%;
-  height: auto;
-  width: auto;
+  width: 200px;
+  height: 200px;
 }
 #project-list {
     height: 70vh;
